task-10: method for finding 3top good students with stream was added