@@ -10,6 +10,7 @@ import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -18,6 +19,8 @@ import java.util.UUID;
 import java.util.stream.Collectors;
 
 import static java.time.OffsetDateTime.parse;
+import static java.util.stream.Collectors.averagingDouble;
+import static java.util.stream.Collectors.groupingBy;
 
 @SpringBootApplication
 public class SchoolApplication {
@@ -67,24 +70,28 @@ public class SchoolApplication {
                 .build();
 
         var student1 = Student.builder()
+                .id(UUID.fromString("a6ae5189-f528-4bed-837a-c4d56cf9b6bb"))
                 .name("Igor")
                 .surname("Petrov")
                 .startDate(parse("2022-09-01T09:00:00+01:00"))
                 .group(group1A)
                 .build();
         var student2 = Student.builder()
+                .id(UUID.fromString("085fc066-113c-4065-93cc-d3ab16bcf4e7"))
                 .name("Oleg")
                 .surname("Ivanov")
                 .startDate(parse("2022-09-01T09:00:00+01:00"))
                 .group(group1A)
                 .build();
         var student3 = Student.builder()
+                .id(UUID.fromString("b59cbbb6-ab12-441b-8f1f-e7dcdffd2010"))
                 .name("Maxim")
                 .surname("Svetlov")
                 .startDate(parse("2022-09-01T09:00:00+01:00"))
                 .group(group1A)
                 .build();
         var student4 = Student.builder()
+                .id(UUID.fromString("0e16ddd0-a9f3-4f5e-901b-824808cd4aa3"))
                 .name("Irina")
                 .surname("Kasanova")
                 .startDate(parse("2022-09-01T09:00:00+01:00"))
@@ -150,59 +157,93 @@ public class SchoolApplication {
         group1A.setStudents(students1A);
         group1B.setStudents(students1B);
         group2A.setStudents(students2A);
-        var activity1 = Activity.builder()
+
+        var lesson1Student1Mark12 = Activity.builder()
                 .lesson(lesson1)
                 .student(student1)
                 .mark(Optional.of(12))
                 .isPresent(true)
                 .build();
-        var activity2 = Activity.builder()
+        var lesson2Student1Mark12 = Activity.builder()
+                .lesson(lesson2)
+                .student(student1)
+                .mark(Optional.of(12))
+                .isPresent(true)
+                .build();
+        var lesson3Student1Mark12 = Activity.builder()
+                .lesson(lesson3)
+                .student(student1)
+                .mark(Optional.of(12))
+                .isPresent(true)
+                .build();
+
+        var lesson1Student2Mark10 = Activity.builder()
+                .lesson(lesson1)
+                .student(student2)
+                .mark(Optional.of(10))
+                .isPresent(true)
+                .build();
+        var lesson2Student2Mark10 = Activity.builder()
                 .lesson(lesson2)
                 .student(student2)
                 .mark(Optional.of(10))
                 .isPresent(true)
                 .build();
-        var activity3 = Activity.builder()
-                .lesson(lesson3)
-                .student(student7)
-                .mark(Optional.empty())
-                .isPresent(false)
-                .build();
-        var activity4 = Activity.builder()
-                .lesson(lesson1)
-                .student(student2)
-                .mark(Optional.empty())
-                .isPresent(false)
-                .build();
-        var activity5 = Activity.builder()
+        var lesson3Student2Mark10 = Activity.builder()
                 .lesson(lesson3)
                 .student(student2)
-                .mark(Optional.empty())
-                .isPresent(false)
-                .build();
-        var activity6 = Activity.builder()
-                .lesson(lesson3)
-                .student(student6)
-                .mark(Optional.of(9))
+                .mark(Optional.of(10))
                 .isPresent(true)
                 .build();
-        var activity7 = Activity.builder()
-                .lesson(lesson3)
-                .student(student7)
-                .mark(Optional.of(5))
-                .isPresent(true)
-                .build();
-        var activity8 = Activity.builder()
+
+        var lesson1Student3Mark12 = Activity.builder()
                 .lesson(lesson1)
-                .student(student7)
+                .student(student3)
+                .mark(Optional.of(12))
+                .isPresent(true)
+                .build();
+        var lesson2Student3NoMark = Activity.builder()
+                .lesson(lesson2)
+                .student(student3)
                 .mark(Optional.empty())
                 .isPresent(false)
                 .build();
-        var activities = List.of(activity1, activity2, activity3, activity4, activity5);
-        var activities1 = List.of(activity1, activity2, activity3, activity4, activity5, activity6, activity7, activity8);
+        var lesson3Student3NoMark = Activity.builder()
+                .lesson(lesson3)
+                .student(student3)
+                .mark(Optional.empty())
+                .isPresent(false)
+                .build();
+
+        var lesson1Student4NoMark = Activity.builder()
+                .lesson(lesson1)
+                .student(student4)
+                .mark(Optional.empty())
+                .isPresent(false)
+                .build();
+        var lesson2Student4NoMark = Activity.builder()
+                .lesson(lesson2)
+                .student(student4)
+                .mark(Optional.empty())
+                .isPresent(false)
+                .build();
+        var lesson3Student4NoMark = Activity.builder()
+                .lesson(lesson3)
+                .student(student4)
+                .mark(Optional.empty())
+                .isPresent(false)
+                .build();
+
+        var activities = List.of(
+                lesson1Student1Mark12, lesson2Student1Mark12, lesson3Student1Mark12,
+                lesson1Student2Mark10, lesson2Student2Mark10, lesson3Student2Mark10,
+                lesson1Student3Mark12, lesson2Student3NoMark, lesson3Student3NoMark,
+                lesson1Student4NoMark, lesson2Student4NoMark, lesson3Student4NoMark
+        );
         System.out.println(findBestTruantsInSchool(activities));
-        System.out.println(findBestTruantsInGroup(activities1, group2A.getId()));
-        System.out.println(find3BestStudentsInSchool(activities1));
+        System.out.println(findBestTruantsInGroup(activities, group1A.getId()));
+        System.out.println(find3BestStudentsInSchool(activities));
+        System.out.println(find3BestStudentsInSchoolStream(activities));
     }
 
     // method that gets a list of students from the school who skipped the most lessons
@@ -240,44 +281,44 @@ public class SchoolApplication {
         return amountTruanciesEachStudent;
     }
 
-    // method that gets a list of 3 students from school who are getting only good marks
+    // method that gets a list of 3 students from school who have higher average marks
     private static List<UUID> find3BestStudentsInSchool(List<Activity> activities) {
-        Map<UUID, List<Integer>> studentsWithMarks = new HashMap<>();
+        Map<UUID, List<Integer>> studentMarks = new HashMap<>();
         for (Activity activity : activities) {
-            if (isMarkInRange(activity)) {
-                var marks = new ArrayList<Integer>();
-                if (studentsWithMarks.containsKey(activity.getStudent().getId())) {
-                    marks = (ArrayList<Integer>) studentsWithMarks.get(activity.getStudent().getId());
-                }
-                marks.add(activity.getMark().orElseThrow());
-                studentsWithMarks.put(activity.getStudent().getId(), marks);
-            }
+            var studentId = activity.getStudent().getId();
+            var studentMark = activity.getMark().orElse(0);
+            var existingStudentMarks = Optional.ofNullable(studentMarks.get(studentId)).orElse(new ArrayList<>());
+            existingStudentMarks.add(studentMark);
+            studentMarks.put(studentId, existingStudentMarks);
         }
+        System.out.println(studentMarks);
 
         Map<UUID, Double> studentsWithAverageMark = new HashMap<>();
-        for (Map.Entry<UUID, List<Integer>> entry : studentsWithMarks.entrySet()) {
+        for (Map.Entry<UUID, List<Integer>> entry : studentMarks.entrySet()) {
             studentsWithAverageMark.put(entry.getKey(), getAverageMark(entry.getValue()));
         }
         return studentsWithAverageMark.entrySet().stream()
-                .sorted(Map.Entry.comparingByValue())
+                .sorted(Map.Entry.comparingByValue(Comparator.reverseOrder()))
                 .limit(3)
                 .map(Map.Entry::getKey)
-                .collect(Collectors.toList());
-    }
-
-    private static boolean isMarkInRange(Activity activity) {
-        if (activity.getMark().isEmpty()) {
-            return false;
-        }
-        return Optional.ofNullable(activity.getMark())
-                .filter(mark -> mark.get() >= 8)
-                .filter(mark -> mark.get() <= 12)
-                .isPresent();
+                .toList();
     }
 
     private static double getAverageMark(List<Integer> marks) {
         return marks.stream()
                 .mapToInt(Integer::intValue)
                 .average().orElseThrow();
+    }
+
+    // method that gets a list of 3 students from school who have higher average marks, using stream
+    private static List<UUID> find3BestStudentsInSchoolStream(List<Activity> activities) {
+        Map<UUID, Double> studentAverageMark = activities.stream()
+                .collect(groupingBy((e -> e.getStudent().getId()), averagingDouble(e -> e.getMark().orElse(0))));
+
+        return studentAverageMark.entrySet().stream()
+                .sorted(Map.Entry.comparingByValue(Comparator.reverseOrder()))
+                .limit(3)
+                .map(Map.Entry::getKey)
+                .toList();
     }
 }
